--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="keywords" content="UralbekUZbot, Uralbek UZ bot, Uralbek Menyu bot">
+<meta name="description" content="Birinchi mustaqil bepul qo‘llanma">
+<meta name="author" content="Uralbek Tursunov">
+<style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}</style>
+<title>UralbekUZbot</title>
 </head>
 <body>
 
