--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <meta name="author" content="Uralbek Tursunov">
 <style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}</style>
 <title>UralbekUZbot</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<div class="">
-    
+<div class="w3-top">
+
 </div>
 </body>
 </html>
