--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <meta name="keywords" content="UralbekUZbot, Uralbek UZ bot, Uralbek Menyu bot">
 <meta name="description" content="Birinchi mustaqil bepul qo‘llanma">
 <meta name="author" content="Uralbek Tursunov">
-<style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}</style>
+<style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
+.card,.hover-shadow:hover{box-shadow:0 0 0 0 rgba(0,0,0,0.100),0 3px 3px 0 rgba(0,0,0,0.35)}
+</style>
 <title>UralbekUZbot</title>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<div class="w3-top w3-card">
+<div class="w3-top card">
 g
 </div>
 </body>
