--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 .card,.hover-shadow:hover{box-shadow:0 0 0 0 rgba(0,0,0,0.100),0 3px 3px 0 rgba(0,0,0,0.35)}
 </style>
 <title>UralbekUZbot</title>
+<!--STYLE STYLE-->
+<link rel="stylesheet" href="https://UralbekUZbot.netlify.app/style.css"/>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<!--GOOGLE FONTS-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="w3-top card">
-<div class="container">
+<div class="tcontainer">
     
 </div>
 </div>
