--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="w3-top card">
 <div class="tcontainer">
-    <b class="logo"></b>
+    <b class="logotip">DASTURLASH</b>
 </div>
 </div>
 </body>
