--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
 <div class="w3-top card">
 <div class="tcontainer">
+    <b class="logotip">&#160;&#9776;&#160;</b>
     <b class="logotip">Dasturlash UZ</b>
 </div>
 </div>
