--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="w3-top card">
 <div class="tcontainer">
-    <b class="logotip">&#160;&#9776;&#160;</b>
+    <a class="logotip">&#9776;&#160;</a>
     <b class="logotip">Dasturlash UZ</b>
 </div>
 </div>
