--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 <div class="w3-top card">
-<div class="tcontainer">
-    <a class="logotip">&#9776;&#160;</a>
+<div class="tcontainer w3-dropdown-hover">
+    <a class="logotip">&#9776;&#160;</a>&#160;
     <b class="logotip">Dasturlash UZ</b>
 </div>
 </div>
