--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <div class="tcontainer w3-dropdown-hover">
     <a class="logotip">&#9776;&#160;</a>&#160;
     <b class="logotip">Dasturlash UZ</b>
+    <div class="w3-dropdown-content w3-bar-block w3-border">
+      <a href="#" class="w3-bar-item w3-button">Link 1</a>
+      <a href="#" class="w3-bar-item w3-button">Link 2</a>
+      <a href="#" class="w3-bar-item w3-button">Link 3</a>
+      </div>
 </div>
 </div>
 </body>
