--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 <div class="w3-top card">
-<div class="tcontainer w3-dropdown-hover">
-    <a class="logotip">&#9776;&#160;</a>&#160;
+<div class="tcontainer w3-con">
+    <a class="logotip w3-dropdown-hover">&#9776;&#160;</a>&#160;
     <b class="logotip">Dasturlash UZ</b>
     <div class="w3-dropdown-content w3-bar-block w3-border">
       <a href="#" class="w3-bar-item w3-button">Link 1</a>
