--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div class="w3-top card">
-<div class="tcontainer w3-con">
+<div class="tcontainer w3-container">
     <a class="logotip w3-dropdown-hover">&#9776;&#160;</a>&#160;
     <b class="logotip">Dasturlash UZ</b>
     <div class="w3-dropdown-content w3-bar-block w3-border">
