--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="w3-top card">
-<div class="tcontainer w3-container">
+<div class="w3-top w3-container card">
+<div class="tcontainer">
     <a class="logotip w3-dropdown-hover">&#9776;&#160;</a>&#160;
     <b class="logotip">Dasturlash UZ</b>
     <div class="w3-dropdown-content w3-bar-block w3-border">
