--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 <body>
 <div class="w3-top w3-container card">
 <div class="tcontainer">
-    <b class="logotip w3-dropdown-hover">&#9776;&#160;<span class="w3-dropdown-content w3-green w3-padding">Hello World!</span></b>&#160;
-    <b class="logotip">Dasturlash UZ</b>
-    <span class="w3-dropdown-content w3-green w3-padding">Hello World!</span>
+    &#160;<b class="logotip">Dasturlash UZ</b>
 </div>
 </div>
 </body>
