--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 <body>
 <div class="w3-top w3-container card">
 <div class="tcontainer">
-    &#160;<b class="logotip">Dasturlash UZ</b>
+    <b class="logotip">Dasturlash UZ</b>
 </div>
+
+<div class="w3-black">
+    
+</div>
+
 </div>
 </body>
 </html>
