--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <b class="logotip">Dasturlash UZ</b>
 </div>
 
-<div class="w3-tiny w3-black">
-    <b class="logotip w3-dropdown-hover">&#160;&#160;&#9776;&#160;<span class="w3-dropdown-content w3-green w3-padding">Hello World!</span></b>
+<div class="w3-small w3-black">
+    <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;<span class="w3-dropdown-content w3-green w3-padding">Hello World!</span></b>
 </div>
 
 </div>
