--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="w3-small w3-black">
     <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
-    <span class="w3-dropdown-content w3-green w3-padding">Hello World!</span>
+    <span class="w3-dropdown-content w3-red w3-padding">Hello World!</span>
     <span class="w3-dropdown-content w3-padding">Hello World!</span>
     <span class="w3-dropdown-content w3-padding">Hello World!</span>
     <span class="w3-dropdown-content w3-padding">Hello World!</span>
