--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
 
 <div class="w3-small w3-black">
     <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
-    <span class="w3-dropdown-content w3-red w3-padding">Hello World!</span>
-    <span class="w3-dropdown-content w3-padding">Hello World!</span>
-    <span class="w3-dropdown-content w3-padding">Hello World!</span>
-    <span class="w3-dropdown-content w3-padding">Hello World!</span>
-    <span class="w3-dropdown-content w3-padding">Hello World!</span>
-    <span class="w3-dropdown-content w3-padding">Hello World!</span>
+    <a class="" href="#">#</a>
+    
     </b>
 </div>
 
