--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="w3-small w3-black">
     <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
-    <a class="" href="#">#</a>
+    <a class="" class="" href="#">#</a>
     
     </b>
 </div>
