--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <div class="w3-small w3-black">
     <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
-    <a class="" class="" href="#">#</a>
+    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
+    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
+    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
     
     </b>
 </div>
