--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <b class="logotip">Dasturlash UZ</b>
 </div>
 
-<div class="w3-small w3-black">
+<div class="w3-small w3-black ">
     <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
-    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
-    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
-    <a class="w3-dropdown-content w3-green w3-padding" class="" href="#">Sahifa</a>
+    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
+    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
+    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
     
     </b>
 </div>
