--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <b class="logotip">Dasturlash UZ</b>
 </div>
 
-<div class="w3-small w3-black ">
-    <b class="w3-dropdown-hover">&#160;&#160;&#9776;&#160;
+<div class="w3-small w3-black w3-dropdown-hover">
+    <b class="">&#160;&#160;&#9776;&#160;
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
