--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <div class="w3-small w3-black">
 
-<div class="bl">
-    
+<div class="w3-black w3-dropdown-hover">
+    <b></b>
 </div>
 
 
@@ -38,7 +38,7 @@
 
 
 <div class="w3-small w3-black w3-dropdown-hover">
-    <b class="">&#160;&#160;&#9776;&#160;
+    <b>&#160;&#160;&#9776;&#160;
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
     <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
