--- a/index.html
+++ b/index.html
@@ -26,25 +26,20 @@
 </div>
 
 <div class="w3-small w3-black">
-
 <div class="w3-black w3-dropdown-hover">
-    <b></b>
+    <b>&#160;&#160;&#9776;&#160;</b></div>
+
+<div class="w3-dropdown-content w3-bar-block w3-border">
+      <a href="#" class="w3-bar-item w3-button">Link 1</a>
+      <a href="#" class="w3-bar-item w3-button">Link 2</a>
+      <a href="#" class="w3-bar-item w3-button">Link 3</a>
+    </div>
+
 </div>
 
 
 
-</div>
 
-
-
-<div class="w3-small w3-black w3-dropdown-hover">
-    <b>&#160;&#160;&#9776;&#160;
-    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
-    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
-    <a class="w3-dropdown-content w3-green" class="" href="#">Sahifa</a>
-    
-    </b>
-</div>
 
 </div>
 </body>
