--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
 
 <div class="w3-top card">
 <div class="tcontainer">
-    <b class="logotip">Dasturlash UZ</b>
+    &#160;<b class="logotip">Dasturlash UZ</b>
 </div>
 
 
 
 
-<div class="w3-dropdown-content w3-bar-block w3-border">
-      <a href="#" class="w3-bar-item w3-button">Link 1</a>
-      <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button">Link 3</a>
-    </div>
 
 </div>
 
