--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
 <div class="w3-top card">
 <div class="tcontainer">
-    &#160;<b class="logotip">Dasturlash UZ</b>
+    &#160;<b class="logotip">Dasturlash UZ</b></div>
+
+<div class="w3-small w3">
+    
 </div>
-
-
 
 
 
