--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 <div class="tcontainer">
     &#160;<b class="logotip">Dasturlash UZ</b></div>
 
-<div class="w3-small w3">
+<div class="w3-small w3-black">
+<div class="">
     
 </div>
+</div>
 
 
 
 </div>
-
 </div>
 </body>
 </html>
