--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
     &#160;<b class="logotip">Dasturlash UZ</b></div>
 
 <div class="w3-small w3-black">
-<div class="">
+<div class="w3-small w3-black ">
     
 </div>
 </div>
 
 
 
-</div>
 </div>
 </body>
 </html>
