--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     &#160;<b class="logotip">Dasturlash UZ</b></div>
 
 <div class="w3-small w3-black">
-<div class="w3-small w3-black ">
-    
+<div class="w3-small w3-black w3-dropdown-hover">
+    <a class="w3-black" href="#">&#</a>
 </div>
 </div>
 
