--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="w3-small w3-black">
 <div class="w3-small w3-black w3-dropdown-hover">
-    <a class="w3-black" href="#">&#</a>
+    <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>
 </div>
 </div>
 
