--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <div class="w3-small w3-black">
 <div class="w3-small w3-black w3-dropdown-hover">
     <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>
+<div class="w3-dropdown-content w3-bar-block w3-border">
+      <a href="#" class="w3-bar-item w3-button">Link 1</a>
+      <a href="#" class="w3-bar-item w3-button">Link 2</a>
+      <a href="#" class="w3-bar-item w3-button">Link 3</a>
+    </div>
 </div>
 </div>
 
@@ -37,3 +42,5 @@
 </div>
 </body>
 </html>
+
+sty
