--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class="tcontainer">
     &#160;<b class="logotip">Dasturlash UZ</b></div>
 
-<div class="w3-main w3-black">
-<div class="w3-main w3-black w3-dropdown-hover">
+<div class="w3-small w3-black">
+<div class="w3-small w3-black w3-dropdown-hover">
     <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>
 <div class="w3-dropdown-content w3-bar-block w3-border">
       <a href="#" class="w3-bar-item w3-button">Link 1</a>
@@ -47,5 +47,7 @@
     a.w3-black {
         text-decoration: none;
     }
-    .w3-small 
+    .w3-small {
+        font-size: 2px;
+    }
 </style>
