--- a/index.html
+++ b/index.html
@@ -44,8 +44,5 @@
 </html>
 
 <style>
-    a.w3-black {
-        text-decoration: none;
-        font-size: 15px;
-    }
+a.w3-black{text-decoration:none;font-size:15px}
 </style>
