--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 </html>
 
 <style>
-a.w3-black{text-decoration:none;font-size:15px;
-    font-weight: bold;
+a.w3-black{text-decoration:none;font-size:15px;font-weight:bold;}
+b.logotip {
+    font-size: 28px;
 }
 </style>
