--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
       <a href="#" class="w3-bar-item w3-button">Link 2</a>
       <a href="#" class="w3-bar-item w3-button">Link 3</a>
     </div>
+    
+<div class="scollmenu">
+    <b> &#160; &#160; </b>
+    <a class="logcolor" href="https://UralbekUZbot.netlify.app/index.html"><b>BOSH SAHIFA</b></a>
+    <a href="https://uzbot-news.netlify.app/"><b>YANGILIKLAR</b></a>
+    <a href="https://uralbekbooks.netlify.app/index.html"><b>KITOBLAR</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+    <a href="#"><b>SAHIFA</b></a>
+</div>
+
+
 </div>
 </div>
 
