--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <div class="w3-small w3-black">
 <div class="w3-small w3-black w3-dropdown-hover">&#160;
-    <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>
-    <b>Dasturlash</b>
+    <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>&#160;
+    <b class="w3">Dasturlashni o‘rganamiz</b>
 <div class="w3-dropdown-content w3-bar-block w3-border">
       <a href="#" class="w3-bar-item w3-button">Link 1</a>
       <a href="#" class="w3-bar-item w3-button">Link 2</a>
