--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <style>
 a.w3-black{text-decoration:none;font-size:15px;font-weight:bold;}
 b.logotip {
-    font-size: 26px;
+    font-size: 29px;
 }
-.w3-small {
-    font-size: ;
+b.w3-small {
+    font-size: 28px;
 }
 </style>
