--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="w3-small w3-black">
 <div class="w3-small w3-black w3-dropdown-hover">&#160;
-    <a class="w3-black" href="#">&#160;&#160;&#9776;&#160;</a>&#160;
+    <a class="w3-black" onclick="w3_open()">&#160;&#160;&#9776;&#160;</a>&#160;
 <div class="w3-sidebar w3-bar-block w3-border-right" style="display:none" id="mySidebar">
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
