--- a/index.html
+++ b/index.html
@@ -53,3 +53,13 @@ b.w3-small {
     font-size: 28px;
 }
 </style>
+
+<script>
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
