--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     
-<div class="w3-sidebar w3-bar-block w3-border-right w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
+<div class="w3-sidebar w3-bar-block w3-border-right w3 w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
