--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <div class="w3-small w3-black w3-dropdown-hover">&#160;
     <a class="w3-black" onclick="w3_open()">&#160;&#160;&#9776;&#160;</a>&#160;
 </div>
+<a class="w3-black" onclick="w3_open()">&#160;&#160;&#9776;&#160;</a>
 </div>
 
 
