--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<!--MENYU ICHI-->
 <div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
@@ -31,7 +31,6 @@
 <div class="w3-top w3-white card">
 <div class="tcontainer">
     &#160;<b class="logotip">Dasturlash UZ</b></div>
-
 <div class="w3-small w3-black">
 <div class="w3-small w3-black w3-dropdown-hover">&#160;
     <a class="w3-black" onclick="w3_open()">&#160;&#160;&#9776;&#160;</a>&#160;
