--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 
+<!--CONTAINER-->
 <div class="w3-top w3-white card">
 <div class="tcontainer">
     &#160;<b class="logotip">Dasturlash UZ</b></div>
