--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <!--STYLE STYLE-->
 <link rel="stylesheet" href="https://UralbekUZbot.netlify.app/style.css"/>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<script src="https://uralbek-dasturlash.netlify.app/">
+    
+</script>
 <!--GOOGLE FONTS-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
