--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://UralbekUZbot.netlify.app/style.css"/>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<script src="https://uralbek-dasturlash.netlify.app/">
+<script src="https://uralbek-dasturlash.netlify.app/script.js">
     
 </script>
 <!--GOOGLE FONTS-->
