--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">HTML DARSLIK</a>
   <a href="#" class="w3-bar-item w3-button">CSS DARSLIK</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  <a href="#" class="w3-bar-item w3-button">JS DARSLIK</a>
 </div>
 
 <!--CONTAINER-->
