--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <!--MENYU ICHI-->
 <div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-  <a href="#" class="w3-bar-item w3-button">HTML DARSLIK</a>
-  <a href="#" class="w3-bar-item w3-button">CSS DARSLIK</a>
+  <a href="#" class="w3-bar-item w3-button"><b>HTML DARSLIK</b></a>
+  <a href="#" class="w3-bar-item w3-button"><b>CSS DARSLIK</b></a>
   <a href="#" class="w3-bar-item w3-button">JS DARSLIK</a>
 </div>
 
