--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <button onclick="w3_close()" class="w3-bar-item w3-large">Yopish &times;</button>
   <a href="#" class="w3-bar-item w3-border w3-button"><b>HTML DARSLIK</b></a>
   <a href="#" class="w3-bar-item w3-border w3-button"><b>CSS DARSLIK</b></a>
-  <a href="#" class="w3-bar-item w3-button"><b>JS DARSLIK</b></a>
+  <a href="#" class="w3-bar-item w3-border w3-button"><b>JS DARSLIK</b></a>
 </div>
 
 <!--CONTAINER-->
