--- a/HTML.html
+++ b/HTML.html
@@ -27,7 +27,7 @@
 <!--MENYU ICHI-->
 <div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
   <button onclick="w3_close()" class="w3-bar-item w3-large">Yopish &times;</button>
-  <a href="HTML.html" class="w3-bar-item w3-border-bottom w3-button"><b>HTML DARSLIK</b></a>
+  <a href="HTML.html" class="w3-bar-item w3-border-bottom w3-button"><b class="logotip">HTML DARSLIK</b></a>
   <a href="#" class="w3-bar-item w3-border-bottom w3-button"><b>CSS DARSLIK</b></a>
   <a href="#" class="w3-bar-item w3-border-bottom w3-button"><b>JS DARSLIK</b></a>
 </div>
