--- a/HTML.html
+++ b/HTML.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <!--MENYU ICHI-->
-<div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br /><br /><br />
+<div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br><br><br><br>
   <button onclick="w3_close()" class="w3-bar-item w3-main">Yopish &times;</button>
   <a href="HTML.html" class="w3-green w3-bar-item w3-border-bottom w3-button"><b>HTML DARSLIK</b></a><br>
   <a href="#" class="w3-bar-item w3-border-top w3-border-bottom w3-button"><b>CSS DARSLIK</b></a>
