--- a/HTML.html
+++ b/HTML.html
@@ -26,7 +26,7 @@
 <body>
 <!--MENYU ICHI-->
 <div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br><br><br>
-  <button onclick="w3_close()" class="w3-bar-item w3-main w3-red">Yopish &times;</button>
+  <button onclick="w3_close()" class="w3-bar-item w3-main w3-red">Yopish &times;</button><br>
   <a href="HTML.html" class="w3-green w3-bar-item w3-border-bottom w3-button"><b>HTML DARSLIK</b></a><br>
   <a href="#" class="w3-bar-item w3-border-top w3-border-bottom w3-button"><b>CSS DARSLIK</b></a>
   <a href="#" class="w3-bar-item w3-border-bottom w3-button"><b>JS DARSLIK</b></a>
