--- a/HTML.html
+++ b/HTML.html
@@ -42,10 +42,13 @@
 </div>
 <a class="w3-black" >&#160;&#160;Menyudan foydalaning&#160;</a>
 </div>
-
-
-
 </div>
+
+<div class="w3-container">
+    hhj
+</div>
+
+
 </body>
 </html>
 
