--- a/HTML.html
+++ b/HTML.html
@@ -42,9 +42,9 @@
 </div>
 <a class="w3-black" >&#160;&#160;Menyudan foydalaning&#160;</a>
 </div>
-</div>
+</div><br /><br /><br /><br />
 
-<div class="w3-container">
+<div class="w3-container w3-center">
     hhj
 </div>
 
