--- a/HTML.html
+++ b/HTML.html
@@ -45,7 +45,10 @@
 </div><br /><br /><br /><br />
 
 <div class="w3-container w3-center">
-    <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3>
+    <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
+    <div class="w3-bar">
+        a
+    </div>
 </div>
 
 
