--- a/HTML.html
+++ b/HTML.html
@@ -47,7 +47,7 @@
 <div class="w3-container w3-center">
     <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
     <div class="w3-bar">
-        <a class="w3-left logtextll" href="#">#</a>
+        <a class="w3-left logcolor" href="#">&laquo; Oldingi</a>
     </div>
 </div>
 
