--- a/HTML.html
+++ b/HTML.html
@@ -48,6 +48,7 @@
     <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
     <div class="w3-bar">
         <a class="w3-left logcolor" href="#">&laquo; Oldingi</a>
+        <a class="w3-right logcolor" href="#">Keyingi &radic;</a>
     </div>
 </div>
 
