--- a/HTML.html
+++ b/HTML.html
@@ -49,7 +49,7 @@
     <div class="w3-bar">
         <button class="w3-left"></button>
         <a class="w3-button w3-left logcolor" href="#"> &laquo; Oldingi </a>
-        <a class="w3-right logcolor" href="#"> Keyingi &raquo; </a>
+        <a class="w3-button w3-right logcolor" href="#"> Keyingi &raquo; </a>
     </div>
 </div>
 
