--- a/HTML.html
+++ b/HTML.html
@@ -47,7 +47,7 @@
 <div class="w3-container w3-center">
     <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
     <div class="w3-bar">
-        <button class="w3-button w3-left"></button>
+        <button class="w3-button w3-left logcolor" href="index.html"></button>
         <a class="w3-button w3-left logcolor" href="#"> &laquo; Oldingi </a>
         <a class="w3-button w3-right logcolor" href="#"> Keyingi &raquo; </a>
     </div>
