--- a/HTML.html
+++ b/HTML.html
@@ -48,7 +48,7 @@
     <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
     <div class="w3-bar">
         
-        <a href="index.html"><button class="w3-button w3-left logcolor" href>&laquo; Oldingi</button></a>
+        <a class="w3-left" href="index.html"><button class="w3-button w3-left logcolor">&laquo; Oldingi</button></a>
         <a class="w3-button w3-right logcolor" href="#"> Keyingi &raquo; </a>
     </div>
 </div>
