--- a/HTML.html
+++ b/HTML.html
@@ -52,7 +52,7 @@
 <div class="w3-bar">
         
         <a class="w3-left" href="index.html"><button class="w3-button w3-left logcolor">&laquo; Oldingi</button></a>
-        <a class="w3-button w3-right logcolor" href="#"> Keyingi &raquo; </a>
+        <a class="w3-button w3-right w3-light" href="#"> Keyingi &raquo; </a>
     </div>
 </div>
 
