--- a/HTML.html
+++ b/HTML.html
@@ -50,8 +50,9 @@
 
 <div class="w3-container">
 <div class="w3-bar">
-        
-        <a class="w3-left" href="index.html"><button class="w3-button w3-left logcolor">&laquo; Oldingi</button></a>
+    <a class="w3-left" href="index.html">
+        <button class="w3-button w3-left ">&laquo; Oldingi</button>
+    </a>
         <a class="w3-button w3-right w3-light" href="#"> Keyingi &raquo; </a>
     </div>
 </div>
