--- a/HTML.html
+++ b/HTML.html
@@ -51,7 +51,7 @@
 <div class="w3-container">
 <div class="w3-bar">
     <a class="w3-left" href="index.html">
-        <button class="w3-button w3-left ">&laquo; Oldingi</button>
+        <button class="w3-button w3-left w3-light-grey">&laquo; Oldingi</button>
     </a>
         <a class="w3-button w3-right w3-light" href="#"> Keyingi &raquo; </a>
     </div>
