--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body onload="startTime()">
-<div class="w3-sidebar w3">
+<div class="w3-sidebar w3-bar-block w3-animate-left w3-card w3-border-right" style="display:none" id="mySidebar">
     
 </div>
 
