--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="#"><b>MEDIA</b></a>
     <a href="#"><b>YANGILIKLAR</b></a>
     <a href="#"><b>TA’LIM</b></a>
-    <a href="https://UralbekUZbot.netlify.app/dasturlash.html"><b>DASTURLASH</b></a>
+    <a href="https://uralbek-programmes.netlify.app/index.html"><b>DASTURLASH</b></a>
     <b>&#160;&#160;</b>
 </div>
 </div>
