--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
     <a class="w3-right w3-red" onclick="w3_close()">&#160; &times; &#160;</a>
 </div>
 <svg style="background-color:#fff" width="100%" height="70" viewbox="0 0 100 100" preserveAspectRatio="none"><path id="wavepath" d="M0,0  L125,0C60,180 50,0 0,100z" fill="#282A45"/></svg><br><br>
+  <a href="shablon.html" class="w3-border-bottom w3-bar-item w3-button"><b>SHABLON</b></a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 3</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 3</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 3</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 3</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-border-bottom w3-bar-item w3-button">Link 3</a>
+  <br>
+  <a href="https://UralbekUZbot.netlify.app/Call-center.html" class="w3-bar-item w3-button"><b>📞 Aloqa Markazi</b></a>
+<br><br><br>
+<div class="footer-color w3-container w3-center w3-text-white"><br>
+<b class="w3-tiny Versiya">Versiya: &#160;v1.4.7 &#160;(140624)</b>
+<br><br><br>
+</div>
 </div>
 
 
