--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div id="ub-top">
 <div id="header">
-    <a id="menyu"><b>&#160;&#9776;&#160;</b></a>
+    <a id="menyu" onclick="w3_open()"><b>&#160;&#9776;&#160;</b></a>
     <b id="logotip">Uralbek UZ</b>
 </div>
 <div class="scollmenu">
