--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body onload="startTime()">
+<!--ICHKI MENYU-->
 <div class="w3-sidebar w3-bar-block w3-animate-left w3-card w3-border-right" style="display:none" id="mySidebar">
 <div class="w3-container footer-color"><br><br><br><br><br>
     <a class="soat" href="https://UralbekUZbot.netlify.app/world-clock.html"><b class="soat w3-text-white" id="soat"></b></a>
