--- a/HTML.html
+++ b/HTML.html
@@ -1,70 +1,101 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="keywords" content="UralbekUZbot, Uralbek UZ bot, Uralbek Menyu bot">
-<meta name="description" content="Birinchi mustaqil bepul qo‘llanma">
-<meta name="author" content="Uralbek Tursunov">
-<style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
-.card,.hover-shadow:hover{box-shadow:0 0 0 0 rgba(0,0,0,0.100),0 3px 3px 0 rgba(0,0,0,0.35)}
-</style>
-<title>UralbekUZbot</title>
-<!--STYLE STYLE-->
-<link rel="stylesheet" href="https://UralbekUZbot.netlify.app/style.css"/>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<script src="https://uralbek-dasturlash.netlify.app/script.js">
-    
-</script>
-<!--GOOGLE FONTS-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Landshaft</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!--MENYU ICHI-->
-<div class="w3-sidebar w3-bar-block w3-border-right w3-small w3-text-black" style="display:none" id="mySidebar"><br><br><br>
-  <button onclick="w3_close()" class="w3-bar-item w3-main w3-red">Yopish &times;</button><br>
-  <a href="HTML.html" class="w3-green w3-bar-item w3-border-bottom w3-button"><b>HTML DARSLIK</b></a><br>
-  <a href="#" class="w3-bar-item w3-border-top w3-border-bottom w3-button"><b>CSS DARSLIK</b></a>
-  <a href="#" class="w3-bar-item w3-border-bottom w3-button"><b>JS DARSLIK</b></a>
-</div>
-
-<!--CONTAINER-->
-<div class="w3-top w3-white card">
-<div class="tcontainer">
-    &#160;<b class="logotip">Dasturlash UZ</b></div>
-<div class="w3-small w3-black">
-<div class="w3-small w3-black w3-dropdown-hover">&#160;
-    <a class="w3-black" onclick="w3_open()">&#160;&#160;&#9776;&#160;</a>&#160;
-</div>
-<a class="w3-black" >&#160;&#160;Menyudan foydalaning&#160;</a>
-</div>
-</div><br /><br /><br /><br />
-
-<div class="w3-container w3-center">
-    <h3 class="logtext"><b><b>HTML DARSLIK</b></b></h3><br><br>
-</div>
-
-<div class="w3-container">
-<div class="w3-bar">
-    <a class="w3-left" href="index.html">
-        <button class="w3-button w3-left w3-light-grey">&laquo; Oldingi</button>
-    </a>
-        <a class="w3-button w3-right w3-light" href="#"> Keyingi &raquo; </a>
+  <div class="landscape">
+    <div class="sky"></div>
+    <div class="sun"></div>
+    <div class="ground"></div>
+    <div class="grass"></div>
+    <div class="tree">
+      <div class="trunk"></div>
+      <div class="foliage"></div>
     </div>
-</div>
-
-
+  </div>
 </body>
 </html>
-
+```
 <style>
-a.w3-black{text-decoration:none;font-size:13px;font-weight:bold;}
-b.logotip {
-    font-size: 24px;
-}
-</style>
+    
 
+CSS (styles.css):
+
+```css
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.landscape {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #87CEEB; /* sky blue */
+  overflow: hidden;
+}
+
+.sky {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: #87CEEB; /* sky blue */
+}
+
+.sun {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 100px;
+  height: 100px;
+  background-color: #FFD700; /* gold */
+  border-radius: 50%;
+}
+
+.ground {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: #8B4513; /* saddlebrown */
+}
+
+.grass {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background-color: #228B22; /* forestgreen */
+}
+
+.tree {
+  position: absolute;
+  bottom: 20px;
+  left: 20%;
+  width: 20px;
+  height: 50px;
+}
+
+.trunk {
+  width: 20px;
+  height: 50px;
+  background-color: #8B4513; /* saddlebrown */
+}
+
+.foliage {
+  position: absolute;
+  top: -20px;
+  width: 50px;
+  height: 50px;
+  background-color: #228B22; /* forestgreen */
+  border-radius: 50%;
+}
