--- a/HTML.html
+++ b/HTML.html
@@ -100,4 +100,7 @@ body, html {
   border-radius: 50%;
 }
 
+html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
+html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
+
 </style>
